metube/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metube
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ytdl.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: production
      services:
        - name: metube
          port: 8081
  tls:
    secretName: $SERVICES_TLS_NAME-tls
